# rustcraft

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  client-release.sh  client.sh  server-release.sh  server.sh
assets/shaders/: blocks.wgsl  repeat.wgsl
assets/textures/: blocks.ron
client/: Cargo.toml
client/src/: command_history.rs  main.rs  resources.rs
client/src/systems/: events.rs  init.rs  input.rs  sync.rs  tick.rs
content/: Cargo.toml
content/src/: lib.rs  main.rs
content/src/biomes/: defs.rs  mod.rs
content/src/blocks/: defs.rs  mod.rs
content/src/worldgen/: mod.rs  noise.rs  passes.rs  scorers.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/lua/: introduction.md  rust.md
docs/src/lua/globals/: blockregistry.md  list.md  logger.md
docs/src/lua/types/: contentidentifier.md  list.md
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/src/: flags.rs  lib.rs  main.rs  state.rs
engine/src/attributes/: lua.rs  map.rs  mod.rs  value.rs
engine/src/blocks/: attributes.rs  def.rs  id.rs  lua.rs  mod.rs  registry.rs  traits.rs
engine/src/content/: id.rs  lua.rs  mod.rs  package.rs
engine/src/debug/: mod.rs
engine/src/grids/: chunk.rs  grid.rs  mod.rs
engine/src/namespace/: id.rs
engine/src/scripting/: logs.rs  mod.rs
engine/src/scripting/bridge/: bevy.rs  luau.rs  mod.rs  stdlib.rs
engine/src/world/: mod.rs
engine/src/world/block/: data.rs  entity.rs  mod.rs  registry.rs
engine/src/world/chunk/meshing/: liquid.rs  mod.rs
engine/src/world/generation/: noise.rs
game/: Cargo.toml
game/src/: main.rs
modlib/: Cargo.toml
modlib/src/: attributes.rs  lib.rs
modlib/src/block/: defaults.rs  entity.rs  mod.rs  registry.rs  traits.rs
modlib/src/chunk/: bundle.rs  mod.rs  registry.rs  resource.rs
modlib/src/chunk/meshing/: mod.rs
modlib/src/debug/: mod.rs
modlib/src/registries/: attributes.rs  mod.rs  startup_write.rs
modlib/src/world/: mod.rs
modlib/src/world/block/: data.rs  entity.rs  mod.rs  registry.rs  traits.rs
modlib/src/world/chunk/: bundle.rs  events.rs  loader.rs  mod.rs  registry.rs
modlib/src/world/chunk/meshing/: greedy.rs  liquid.rs  meshers.rs  mod.rs  solid.rs
modlib/src/world/generation/: biome.rs  generator.rs  helpers.rs  mod.rs  noise.rs  noise_layers.rs
modlib/src/world/generation/biome/: considerations.rs  mod.rs  registry.rs  scorer.rs  table.rs
modlib/src/world/render/: blockatlas.rs  mod.rs  packing.rs  shader.rs
resources/: README.md
resources/prototypes/blocks/: dirt.yml  glass.yml  sand.yml  stone.yml  wood.yml
resources/rustcraft_core/: meta.yml
resources/rustcraft_core/locale/en-US/: hello.ftl  plugin.ftl  voxels.ftl
server/: Cargo.toml
server/src/: main.rs  resources.rs
server/src/systems/: events.rs  init.rs  tick.rs
shared/: Cargo.toml
shared/src/: lib.rs  main.rs  protocol.rs  shared.rs
shared/src/behavior/: process_command.rs
shared/src/localeplugin/: mod.rs
shared/src/modloader/: mod.rs  package.rs
shared/src/protocol/: auth.rs  color.rs  entity_assignment.rs  gridfixture.rs  key_command.rs  position.rs
shared/src/voxelplugin/: chunk.rs  events.rs  mesh.rs  mod.rs  table.rs  voxel.rs
