[package]
name = "rustcraft_client"
version = "0.1.0"
edition = "2021"
authors = ["Veritius"]

[dependencies]
rustcraft_shared = { path = "../shared" }
bevy = { version = "0.7.0", features = ["dynamic"] }
naia-bevy-client = "0.10.1"
naia-shared = "0.10.0"
bevy_console = "0.3.1"
bevy-discord-presence = "0.3.1"
heron = { version = "3.1.0", features = ["3d"] }
serde = "1.0.137"