[package]
name = "rustcraft_client"
version = "0.1.0"
edition = "2021"
authors = ["Veritius"]

[dependencies]
rustcraft_shared = { path = "../shared" }
bevy = "0.7.0"
naia-bevy-client = "0.10.1"
naia-shared = "0.10.0"
bevy_console = "0.3.1"
bevy-discord-presence = "0.3.1"
heron = { version = "3.1.0", features = ["3d"] }
ndarray = "0.12.1"
serde = "1.0.137"