[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"

[features]
big_ids=[] # Increases the potential values of block ids to 2^24

[dependencies.bevy]
version = "0.11.3"

[dependencies.rhai]
version = "1.16.3"
features = ["sync"]

[dependencies.serde]
version = "1.0.190"
features = ["derive"]

[dependencies.ron]
version = "0.8.1"

[dependencies.semver]
version = "1.0.20"
features = ["serde"]