[package]
name = "rustcraft_server"
version = "0.1.0"
edition = "2021"
authors = ["Veritius"]

[dependencies]
rustcraft_shared = { path = "../shared" }
bevy_app = { version = "0.7", default-features=false }
bevy_core = { version = "0.7", default-features=false }
bevy_ecs = { version = "0.7", default-features=false }
bevy_log = { version = "0.7", default-features=false }
naia-bevy-server = { version = "0.10.1", features = ["use-udp"] }
bevy_console = "0.3.1"
bevy_proto = "0.4.0"
heron = "3.1.0"
serde = "1.0.137"