[package]
name = "rustcraft_shared"
version = "0.1.0"
edition = "2021"
authors = ["Veritius"]

[dependencies]
bevy_ecs = { version = "0.7", default-features=false }
bevy_app = { version = "0.7", default-features=false }
bevy_math = { version = "0.7", default-features=false }
naia-shared = "0.10.0"
cfg-if = { version = "1.0" }
ndarray = { version = "0.15.4", features = ["serde"] }
fluent = "0.16.0"
unic-langid = "0.9.0"
glob = "0.3.0"
log = { version = "0.4" }