[package]
name = "rustcraft_shared"
version = "0.1.0"
edition = "2021"
authors = ["Veritius"]

[dependencies]
bevy = "0.7.0"
naia-shared = "0.10.0"
cfg-if = { version = "1.0" }
heron = { version = "3.1.0", features = ["3d"] }
ndarray = { version = "0.15.4", features = ["serde"] }
serde = "1.0.137"
fluent = "0.16.0"
intl-memoizer = "0.5.1"
unic-langid = "0.9.0"
glob = "0.3.0"
log = { version = "0.4" }