[package]
name = "rustcraft_shared"
version = "0.1.0"
edition = "2021"
authors = ["Veritius"]

[dependencies]
bevy = "0.7.0"
bevy_console = "0.3.1"
cfg-if = { version = "1.0" }
heron = { version = "3.1.0", features = ["3d"] }
ndarray = { version = "0.15.4", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
fluent = "0.16.0"
intl-memoizer = "0.5.1"
unic-langid = "0.9.0"
glob = "0.3.0"
log = { version = "0.4" }
libloading = "0.7.3"
yaml-rust = "0.4.5"
toml = "0.5.9"
semver = "1.0.12"